--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <html>
 <head>
+    <title>Welcome to our Project</title>
+	<meta charset="utf-8" />
+
+    <!-- style sheets -->
+	<link rel="stylesheet" href="css/style.css">
+
     <!-- leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
-	<title>Hello World</title>
-	<meta charset="utf-8" />
-
-	<!-- style sheets -->
-	<link rel="stylesheet" href="css/style.css">
-
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        
 </head>
 <body>
 
 	<div class="header">
-		Hawassa University Geospatial Project
+		Hawassa University GeospatialWeb Project
 	</div>
 	<div class="sidebar">
 		My Sidebar
