--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
     <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
+    crossorigin="anonymous"></script>
+
+    <script src="js/papaparse.min.js"></script>    
+    
 </head>
 <body>
 
 	<div class="header">
-		Hawassa University GeospatialWeb Project
+		Hawassa University Geospatial Project
 	</div>
 	<div class="sidebar">
 		My Sidebar
